2007-11-22  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: Added set_get_document_func().
	This avoids us having to link to the application (not in libglom) 
	to get the document from it.
	avahi_start_publishing(): Publish the document contents via a 
	callback, though this needs a change in libepc to copy the data.

	* configure.in: Depend on avahi-ui, so we can show the 
	browse dialog.
	* glom/application.cc:
	* glom/application.h:
	Added ui_file_select_open_with_browse() which adds a browse 
	network button to the file chooser dialog and then gets the server 
	details after asking the user to browse.
	on_menu_file_open(): Use ui_file_select_open_with_browse() instead 
	of regular ui_file_select_open(). Use the new 
	Bakery::App_WithDoc::open_document_from_data() if opening over the 
	network.

2007-11-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc:
	* glom/application.h: Rearrange code to reduce the number of 
	ifdefs.
	* glom/utility_widgets/Makefile.am: Do not build 
	filechooserdialog_saveextras.[h|cc] in client-only mode.

2007-11-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc:
	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/filechooserdialog.cc:
	* glom/utility_widgets/filechooserdialog.h: Rename this to:
	* glom/utility_widgets/filechooserdialog_saveextras.cc:
	* glom/utility_widgets/filechooserdialog_saveextras.h:
	because I want to add another custom one for loading.

2007-11-20  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* glom/libglom/Makefile.am:
	* glom/libglom/avahi_publisher.cc:
	* glom/libglom/avahi_publisher.h: Remove this.
	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: Replace the old 
	AvahiPublisher with use of libepc.
	As before, it currently just advertizes the service, 
	but soon it will publish the .glom file.

2007-11-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/Makefile.am: